name:                jsonprint
version:             1.0.0.0
synopsis:            Initial project template from stack
homepage:            https://github.com/mindreader/jsonprint
license:             BSD3
license-file:        LICENSE
author:              David McHealy
maintainer:          david.mchealy@west.com
copyright:           2016 David McHealy
category:            Commandline
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:
      base >= 4.7 && < 5
    , aeson >= 0.11 && < 2.0
    , bytestring >= 0.10
    , text >= 1.0 && < 2.0
    , mtl >= 2.2 && < 3.0
    , vector >= 0.11 && < 1.0
    , unordered-containers >= 0.2 && < 1.0
    , scientific >= 0.3
  default-language:    Haskell2010

executable jsonprint
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aeson >= 0.11 && < 2.0
                     , bytestring >= 0.10
                     , jsonprint
  default-language:    Haskell2010

test-suite jsonprint-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jsonprint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
